--- a/Modulo II/Programação Web II/Dogdev/index.html
+++ b/Modulo II/Programação Web II/Dogdev/index.html
@@ -58,15 +58,17 @@
 
     <section class="hero">
         <div class="container">
-        <div class="box">
-            <h1>COMIDA DE VERDADE FEITA <span>
-                PARA SEU PET!
-            </span></h1>
-            <h2>Pedidos Personalizados - Pronto para comer - Entrega grátis</h2>
-            <a href="" class="button">
-                Crie seu plano
-            </a>
-        </div>
+            <div class="box">
+                <h1>COMIDA DE VERDADE FEITA<span>
+                    PARA SEU DOG!
+                </span></h1>
+                <h2>Pedidos Personalizados -
+                    Pronto para comer - Entrega grátis
+                </h2>
+                <a href="" class="button">
+                    Crie seu plano
+                </a>
+            </div>
         </div>
     </section>
     
@@ -115,12 +117,15 @@
             </div>
             <div class="right">
                 <ul>
-                    <li>Receitas feitas por vets com ingredientes reais feitos na 
+                    <li>Receitas feitas por vets com
+                        ingredientes reais feitos na
                         <span>cozinha dos humanos</span>
                     </li>
                 </ul>
-                <p>Nós oferecemos comida para dogs excepcionais, com base na ciência,
-                    para dar soluções nutricionais de qualidade incontestável.
+                <p>Nós oferecemos comida para dogs
+                    excepcionais, com base na ciência,
+                    para dar soluções nutricionais de
+                    qualidade incontestável.
                 </p>
                 <div>
                     <a href="" class="button2">
@@ -139,8 +144,10 @@
                     <li>Preparado.</li>
                     <li>Entregue.</li>
                 </ul>
-                <p>Escolha as característica únicas do seu dog e nós vamos
-                    formular o plano alimentar perfeito e nutritivo, entregue na sua porta.
+                <p>Escolha as características únicas do
+                    seu dog e nós vamos formular o plano
+                    alimentar perfeito e nutritivo, 
+                    entregue na sua porta.
                 </p>
                 <div>
                     <a href="" class="button2">
@@ -148,6 +155,82 @@
                     </a>
                 </div>
             </div>
+        </div>
+    </section>
+    <section class="products container" id="products">
+        <h2>Nossos<span> Produtos</span></h2>
+        <p>você pode comprar várias receitas, 
+            petiscos e acessórios.
+            Perfeito paratestaro gosto e oferecer 
+            ao seu dog uma variedade de sabores.
+            Cuida pai de pet!
+        </p>
+        <div class="grid">
+            <a href=""class="product">
+                <div class="image"
+                    style="background-image:
+                    url('./assets/images/comida-1.png');">
+                </div>
+                <div class="info">
+                    <p class="title">Comida cozida</p>
+                    <p class="description">
+                        Delicadamente cozido para obter a textura e 
+                        o sabor suculentos que os dos apreciam
+                        e parapreservar os nutrientes vitais de que necessitam.
+                    </p>
+                    <p class="link"> Saiba mais</p>
+                </div>
+            </a>
+            <a href=""class="product">
+                <div class="image"
+                    style="background-image:
+                    url('./assets/images/comida-2.png');">
+                </div>
+                <div class="info">
+                    <p class="title">Comida assada</p>
+                    <p class="description">
+                        Assado lentamente para obter o sabor 
+                        e a crocância que os filhotes desejam
+                        e para preservar os nutrientes vitais de que necessitam.
+                    </p>
+                    <p class="link"> Saiba mais</p>
+                </div>
+            </a>
+            <a href=""class="product">
+                <div class="image"
+                    style="background-image:
+                    url('./assets/images/comida-3.png');">
+                </div>
+                <div class="info">
+                    <p class="title">Acessórios</p>
+                    <p class="description">
+                        Formulados por veterinários para atender 
+                        a uma variedade de necessidades 
+                        de saúdee bem estar.
+                    </p>
+                    <p class="link"> Saiba mais</p>
+                </div>
+            </a>
+            <a href=""class="product">
+                <div class="image"
+                    style="background-image:
+                    url('./assets/images/comida-4.png');">
+                </div>
+                <div class="info">
+                    <p class="title">Petiscos</p>
+                    <p class="description">
+                        Orgânicos, certificados e ricos em 
+                        proteína para agradar seu doguinho.
+                    </p>
+                    <p class="link"> Saiba mais</p>
+                </div>
+            </a>
+        </div>
+    </section>
+    <section class="testemonials" id="testemonials">
+        <div class="container">
+            <div class="quote"></div>
+            <div class="icons"></div>
         </div>
     </section>
 </body>
