--- a/Modulo II/Programação Web II/Dogdev/index.html
+++ b/Modulo II/Programação Web II/Dogdev/index.html
@@ -233,6 +233,7 @@
             <div class="icons"></div>
         </div>
     </section>
+
 </body>
-<script> src="./assets/js/script.js"</script>
+<script src="./assets/js/script.js"></script>
 </html>
