--- a/Modulo II/Programação Web II/Dogdev/index.html
+++ b/Modulo II/Programação Web II/Dogdev/index.html
@@ -233,7 +233,89 @@
             <div class="icons"></div>
         </div>
     </section>
+    <section class="faq container">
+        <h2>Ganhe tempo vendo <span>aqui</span></h2>
+        <div class="accordion">
+            <div class="item">
+                <div class="title">
+                    <p>Pra quê comprar no DogDev?</p>
+                    <img src="./assets/images/arrow.svg">
+                </div>
+                <div class="body">
+                    <p>Na DogDev, não fazemos comida de cachorro. 
+                    Fazemos comida para cachorro. Nossas refeições 
+                    são feitas com ingredientes alimentares integrais de alta qualidade,
+                     de qualidade humana, que são mais biosiaponíveis 
+                     do que recheios e outros ingredientes de baixa qualidade. 
+                     Preparamos e coxinhamos nossas refeições nas cozinhas residênciais, 
+                     da mesma forma que a comida humana é feita. Cada refeição é recheada 
+                     quente para garantir a segurança e congelada rapidamente para 
+                     manter o frescor.
+                    </p>
+                </div>
+            </div>
+            <div class="item">
+                <div class="title">
+                    <p>Como funciona o plano de assinatura?</p>
+                    <img src="./assets/images/arrow.svg">
+                </div>
+                <div class="body">
+                    <p>Você nos conta sobre seu dog e nós criaremos um plano 
+                        alimentar que faça sentido para vocês dois. 
+                        Enviamosa quantidade certa de comida à sua porta 
+                        para que você nunca precise se preocupar em acabar. 
+                        Cada refeição é repartida perfeitamente para que seu 
+                        filhote sempre receba a quantidade certa de nutrientes.
+                    </p>
+                </div>
+            </div>
+            <div class="item">
+                <div class="title">
+                    <p>Posso pedir uma amostra pra testar?</p>
+                    <img src="./assets/images/arrow.svg">
+                </div>
+                <div class="body">
+                    <p>Não oferecemos amostras no momento, no entanto oferecemos 
+                        uma arantia de devoluçao 100% do dinheiro em seu primeiro 
+                        pedido se você e seu dog não mestiverem completamente 
+                        satisfeitos com sua experiência. Você também pode começar 
+                        um Plano Top qe equivale 25% de um Plano Premium.
+                    </p>
+                </div>
+            </div>
+            <div class="item">
+                <div class="title">
+                    <p>Como faço a transição para DogDev?</p>
+                    <img src="./assets/images/arrow.svg">
+                </div>
+                <div class="body">
+                    <p>Comece misturando DogDev com a comida atual do seu dog. 
+                        DogDev deve representar cerca de 25% da refeição. 
+                        Aumente lentamente essa quantidade até que seu cão coma 100% DogDev. 
+                        Se seu cão tem o estômago sensível ou apresenta pequenos 
+                        problemas de barriga, alimente uma quantidade menor e aumente 
+                        lentamente até que ele se adpte à nova comida.
+                    </p>
+                </div>
+            </div>
+            <div class="item">
+                <div class="title">
+                    <p>Qual a diferença do plano Top e do Premium?</p>
+                    <img src="./assets/images/arrow.svg">
+                </div>
+                <div class="body">
+                    <p>Se você deseja alimentar seu dog com uma dieta 100% 
+                        preparada na hora, completa e balanceada, então nosso Plano 
+                        Premium é ideal para você. Se você quiser adicionar um pouco 
+                        de comida recém-cozida à dieta atual do seu filhote, então 
+                        nosso Plano Top é uma ótima escolha porque pode ser misturado 
+                        a comida atual ou servido como refeição ocasional para nutrição extra.
+                    </p>
+                </div>
+            </div>
+        </div>
 
+    </section>
 </body>
 <script src="./assets/js/script.js"></script>
 </html>
