--- a/Modulo II/Programação Web II/Dogdev/index.html
+++ b/Modulo II/Programação Web II/Dogdev/index.html
@@ -314,8 +314,73 @@
                 </div>
             </div>
         </div>
-
     </section>
+    <section class="newsletter">
+        <div class=""container>
+            <h2>Se inscreva para <span>nividades</span></h2>
+            <p>Receba acesso exclusivo a ofertas especiais, promoções,
+                atualizações de produtos, novidades e muito mais.
+            </p>
+            <form method="POST">
+                <input type="email" placaholder="Digite seu e-mail">
+                <button class="button">Enviar</button>
+            </form>
+        </div>
+    </section>
+    <footer>
+        <div class="container">
+            <nav>
+                <p>Produtos</p>
+                <ul>
+                    <li><a href="">Frango Frito</a></li>
+                    <li><a href="">Bife do Oião</a></li>
+                    <li><a href="">Peru de Calda</a></li>
+                    <li><a href="">Lombo Fresco</a></li>
+                    <li><a href="">Porco Mega Blaster</a></li>
+                    <li><a href="">Maçã de Frango</a></li>
+                    <li><a href="">Banana Caramelizada</a></li>
+                    <li><a href="">Goma de Mascar</a></li>
+                    <li><a href="">Prato Personalizado</a></li>
+                </ul>
+            </nav>
+            <nav>
+                <p>Sobre</p>
+                <ul>
+                    <li><a href="">Nosso Processo</a></li>
+                    <li><a href="">Como Funciona</a></li>
+                    <li><a href="">Depoimentos</a></li>
+                    <li><a href="">Carreira</a></li>
+                    <li><a href="">Presentes</a></li>
+                    <li><a href="">Imprensa</a></li>
+                </ul>
+            </nav>
+            <nav>
+                <p>Comunidade</p>
+                <ul>
+                    <li><a href="">Blog</a></li>
+                    <li><a href="">DogDev Club</a></li>
+                    <li><a href="">Mande Para Um Amigo</a></li>
+                    <li><a href="">Embaixadores</a></li>
+                    <li><a href="">Torne-se Um Afiliado</a></li>
+                    <li><a href="">Instagram/a></li>
+                    <li><a href="">Facebook</a></li>
+                    <li><a href="">X(Twitter)r</a></li>
+                    <li><a href="">Tiktok</a></li>
+                </ul>
+            </nav>
+            <nav>
+                <p>Suporte</p>
+                <ul>
+                    <li><a href="">contato@dogdev.com.br</a></li>
+                    <li><a href="">(11) 00000-0000</a></li>
+                    <li><a href="">Perguntas Frenquentes</a></li>
+                    <li><a href="">Minha Conta</a></li>
+                    <li><a href="">Política de Privacidade</a></li>
+                    <li><a href="">Termos de Uso</a></li>
+                </ul>
+            </nav>
+        </div>
+    </footer>
 </body>
 <script src="./assets/js/script.js"></script>
 </html>
