--- a/Modulo II/Programação Web II/Dogdev/index.html
+++ b/Modulo II/Programação Web II/Dogdev/index.html
@@ -316,17 +316,20 @@
         </div>
     </section>
     <section class="newsletter">
-        <div class=""container>
-            <h2>Se inscreva para <span>nividades</span></h2>
-            <p>Receba acesso exclusivo a ofertas especiais, promoções,
-                atualizações de produtos, novidades e muito mais.
+        <div class="container">
+            <h2>Se inscreva para <span>novidades</span></h2>
+            <p>Receba acesso exclusivo a ofertas
+                especiais, promoções, atualizações de
+                produtos, novidades e muito mais.
             </p>
             <form method="POST">
-                <input type="email" placaholder="Digite seu e-mail">
+                <input type="email" 
+                placeholder="Digite seu e-mail">
                 <button class="button">Enviar</button>
             </form>
         </div>
     </section>
+
     <footer>
         <div class="container">
             <nav>
@@ -379,6 +382,8 @@
                     <li><a href="">Termos de Uso</a></li>
                 </ul>
             </nav>
+        </div>
+        <div class="bar">DogDev - Todos os direitos reservados - 2025
         </div>
     </footer>
 </body>
